exercises/calico/egress3/egress-allow-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-egress-namespace
spec:
  podSelector: {} # This matches all pods in the namespace
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: web

  # If you don't add this, and just apply this policy,
  # DNS to resolve service's names is blocked
  # - to:
  #   ports:
  #   - protocol: UDP
  #     port: 53
